# ACA-Authorized-Certification-Authority-v3

./: .env  .gitattributes  .gitignore  README.md  create_project.bat  devcontainer.json  pyproject.toml  requirements.txt  setup.py
.streamlit/: config.toml
app/: __init__.py  main.py  run.py
app/components/: __init__.py  analytics_dashboard.py  auth.py  certificados.py  chat.py  dashboard_widgets.py  metrics_dashboard.py  notifications.py  report_generator.py  sidebar.py  solicitudes.py
app/config/: __init__.py  configuration.py  secrets_manager.py
app/models/: database.py
app/pages/: __init__.py  certificates.py  clients.py  home.py  requests.py  settings.py
app/services/: __init__.py  ai_service_interface.py  factory.py  metrics_service.py  openai_service.py  sambanova_service.py  vertex_service.py
app/utils/: __init__.py  cache.py  db.py  helpers.py  logger.py
components/: certificados.py  dashboard_widgets.py  solicitudes.py
config/: configuration.py  secrets_manager.py
frontend/styles/: style.css
services/: ai_service_interface.py  factory.py  metrics_service.py  openai_service.py  sambanova_service.py  vertex_service.py
utils/: cache.py  database.py  helpers.py  logger.py  monitoring.py
