[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acma-dashboard"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "ACMA Dashboard"
requires-python = ">=3.8"
dependencies = [
    "streamlit==1.32.0",
    "plotly==5.18.0",
    "pandas==2.2.0",
    "redis==5.0.1",
    "python-dotenv==1.0.0",
]

[tool.setuptools]
packages = ["app"]
